--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+u<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -81,6 +81,11 @@
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="advantage-list">
             <li class="advantage-item">
+              <div class="advantage-icon">
+                <svg width="64" height="64">
+                  <use href="./images/hero-icons.svg#icon-antenna-1></use>"
+                </svg>
+              </div>
               <h3 class="title-three">Strategy</h3>
               <p class="inside-text">
                 Our goal is to identify the business problem to walk away with
@@ -88,6 +93,11 @@
               </p>
             </li>
             <li class="advantage-item">
+              <div class="advantage-icon">
+                <svg width="64" height="64">
+                  <use href="./images/hero-icons.svg#icon-clock-1></use>"
+                </svg>
+              </div>
               <h3 class="title-three">Punctuality</h3>
               <p class="inside-text">
                 Bring the key message to the brand's audience for the best price
@@ -95,6 +105,11 @@
               </p>
             </li>
             <li class="advantage-item">
+              <div class="advantage-icon">
+                <svg width="64" height="64">
+                  <use href="./images/hero-icons.svg#icon-diagram-1></use>"
+                </svg>
+              </div>
               <h3 class="title-three">Diligence</h3>
               <p class="inside-text">
                 Research and confirm brands that present the strongest digital
@@ -102,6 +117,11 @@
               </p>
             </li>
             <li class="advantage-item">
+              <div class="advantage-icon">
+                <svg width="64" height="64">
+                  <use href="./images/hero-icons.svg#icon-astronaut-1></use>"
+                </svg>
+              </div>
               <h3 class="title-three">Technologies</h3>
               <p class="inside-text">
                 Design practice focused on digital experiences. We bring forth a
