--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-u<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -83,7 +83,7 @@ u<!DOCTYPE html>
             <li class="advantage-item">
               <div class="advantage-icon">
                 <svg width="64" height="64">
-                  <use href="./images/hero-icons.svg#icon-antenna-1></use>"
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
               <h3 class="title-three">Strategy</h3>
@@ -95,7 +95,7 @@ u<!DOCTYPE html>
             <li class="advantage-item">
               <div class="advantage-icon">
                 <svg width="64" height="64">
-                  <use href="./images/hero-icons.svg#icon-clock-1></use>"
+                  <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
               <h3 class="title-three">Punctuality</h3>
@@ -107,7 +107,7 @@ u<!DOCTYPE html>
             <li class="advantage-item">
               <div class="advantage-icon">
                 <svg width="64" height="64">
-                  <use href="./images/hero-icons.svg#icon-diagram-1></use>"
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
               <h3 class="title-three">Diligence</h3>
@@ -119,7 +119,7 @@ u<!DOCTYPE html>
             <li class="advantage-item">
               <div class="advantage-icon">
                 <svg width="64" height="64">
-                  <use href="./images/hero-icons.svg#icon-astronaut-1></use>"
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <h3 class="title-three">Technologies</h3>
