--- a/index.html
+++ b/index.html
@@ -66,13 +66,11 @@
       <!-- !Hero -->
       <section class="hero-section">
         <div class="container">
+          <h1 class="title-one">Effective Solutions for Your Business</h1>
 
-            <h1 class="title-one">Effective Solutions for Your Business</h1>
-
-            <button type="button" class="hero-button hero-actions">
-              Order Service
-            </button>
-      
+          <button type="button" class="hero-button hero-actions">
+            Order Service
+          </button>
         </div>
       </section>
       <!-- !Advantages -->
@@ -146,6 +144,44 @@
               <div class="name-item">
                 <h3 class="title-three centered">Mark Guerrero</h3>
                 <p class="inside-text centered">Product Designer</p>
+                <ul class="card-socials-list">
+                  <li class="card-socials-item">
+                    <div class="card-socials-icon">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/social-icons.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="card-socials-icon">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/social-icons.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="card-socials-icon">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/social-icons.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="card-socials-icon">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/social-icons.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="card-background card-item">
@@ -158,6 +194,44 @@
               <div class="name-item">
                 <h3 class="title-three centered">Tom Ford</h3>
                 <p class="inside-text centered">Frontend Developer</p>
+                <ul class="card-socials-list">
+                  <li class="card-socials-item">
+                    <div class="card-socials-icon">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/social-icons.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="card-socials-icon">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/social-icons.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="card-socials-icon">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/social-icons.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="card-socials-icon">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/social-icons.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="card-background card-item">
@@ -170,6 +244,44 @@
               <div class="name-item">
                 <h3 class="title-three centered">Camila Garcia</h3>
                 <p class="inside-text centered">Marketing</p>
+                <ul class="card-socials-list">
+                  <li class="card-socials-item">
+                    <div class="card-socials-icon">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/social-icons.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="card-socials-icon">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/social-icons.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="card-socials-icon">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/social-icons.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="card-socials-icon">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/social-icons.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="card-background card-item">
@@ -182,6 +294,44 @@
               <div class="name-item">
                 <h3 class="title-three centered">Daniel Wilson</h3>
                 <p class="inside-text centered">UI Designer</p>
+                <ul class="card-socials-list">
+                  <li class="card-socials-item">
+                    <div class="card-socials-icon">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/social-icons.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="card-socials-icon">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/social-icons.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="card-socials-icon">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/social-icons.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="card-socials-icon">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/social-icons.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
