--- a/index.html
+++ b/index.html
@@ -145,41 +145,37 @@
                 <h3 class="title-three centered">Mark Guerrero</h3>
                 <p class="inside-text centered">Product Designer</p>
                 <ul class="card-socials-list">
-                  <li class="card-socials-item">
-                    <div class="card-socials-icon">
-                      <svg width="16" height="16">
+                  <li>
+                    <a class="card-socials-icon" href="#"
+                      ><svg width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-instagram-2"
-                        ></use>
-                      </svg>
-                    </div>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <div class="card-socials-icon">
-                      <svg width="16" height="16">
+                    <a class="card-socials-icon" href="#"
+                      ><svg width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-twitter-1"
-                        ></use>
-                      </svg>
-                    </div>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <div class="card-socials-icon">
-                      <svg width="16" height="16">
+                    <a class="card-socials-icon" href="#"
+                      ><svg width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-facebook-1"
-                        ></use>
-                      </svg>
-                    </div>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <div class="card-socials-icon">
-                      <svg width="16" height="16">
+                    <a class="card-socials-icon" href="#"
+                      ><svg width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-linkedin-1"
-                        ></use>
-                      </svg>
-                    </div>
+                        ></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -195,41 +191,37 @@
                 <h3 class="title-three centered">Tom Ford</h3>
                 <p class="inside-text centered">Frontend Developer</p>
                 <ul class="card-socials-list">
-                  <li class="card-socials-item">
-                    <div class="card-socials-icon">
-                      <svg width="16" height="16">
+                  <li>
+                    <a class="card-socials-icon" href="#"
+                      ><svg width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-instagram-2"
-                        ></use>
-                      </svg>
-                    </div>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <div class="card-socials-icon">
-                      <svg width="16" height="16">
+                    <a class="card-socials-icon" href="#"
+                      ><svg width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-twitter-1"
-                        ></use>
-                      </svg>
-                    </div>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <div class="card-socials-icon">
-                      <svg width="16" height="16">
+                    <a class="card-socials-icon" href="#"
+                      ><svg width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-facebook-1"
-                        ></use>
-                      </svg>
-                    </div>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <div class="card-socials-icon">
-                      <svg width="16" height="16">
+                    <a class="card-socials-icon" href="#"
+                      ><svg width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-linkedin-1"
-                        ></use>
-                      </svg>
-                    </div>
+                        ></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -245,41 +237,38 @@
                 <h3 class="title-three centered">Camila Garcia</h3>
                 <p class="inside-text centered">Marketing</p>
                 <ul class="card-socials-list">
-                  <li class="card-socials-item">
-                    <div class="card-socials-icon">
-                      <svg width="16" height="16">
+                  <li>
+                    <a class="card-socials-icon" href="#"
+                      ><svg width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-instagram-2"
-                        ></use>
-                      </svg>
-                    </div>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <div class="card-socials-icon">
-                      <svg width="16" height="16">
+                    <a class="card-socials-icon" href="#"
+                      ><svg width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-twitter-1"
-                        ></use>
-                      </svg>
-                    </div>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <div class="card-socials-icon">
-                      <svg width="16" height="16">
+                    <a class="card-socials-icon" href="#"
+                      ><svg width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-facebook-1"
-                        ></use>
-                      </svg>
-                    </div>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li>
-                    <div class="card-socials-icon">
+                    <a class="card-socials-icon" href="#">
                       <svg width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-linkedin-1"
                         ></use>
                       </svg>
-                    </div>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -295,41 +284,41 @@
                 <h3 class="title-three centered">Daniel Wilson</h3>
                 <p class="inside-text centered">UI Designer</p>
                 <ul class="card-socials-list">
-                  <li class="card-socials-item">
-                    <div class="card-socials-icon">
+                  <li>
+                    <a class="card-socials-icon" href="#">
                       <svg width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-instagram-2"
                         ></use>
                       </svg>
-                    </div>
+                    </a>
                   </li>
                   <li>
-                    <div class="card-socials-icon">
+                    <a class="card-socials-icon" href="#">
                       <svg width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-twitter-1"
                         ></use>
                       </svg>
-                    </div>
+                    </a>
                   </li>
                   <li>
-                    <div class="card-socials-icon">
+                    <a class="card-socials-icon" href="#">
                       <svg width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-facebook-1"
                         ></use>
                       </svg>
-                    </div>
+                    </a>
                   </li>
                   <li>
-                    <div class="card-socials-icon">
+                    <a class="card-socials-icon" href="#">
                       <svg width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-linkedin-1"
                         ></use>
                       </svg>
-                    </div>
+                    </a>
                   </li>
                 </ul>
               </div>
