--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <h3 class="title-three centered">Mark Guerrero</h3>
                 <p class="inside-text centered">Product Designer</p>
                 <ul class="card-socials-list">
-                  <li>
+                  <li class="icon-link">
                     <a class="card-socials-icon" href="#"
                       ><svg width="16" height="16">
                         <use
@@ -153,7 +153,7 @@
                         ></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="icon-link">
                     <a class="card-socials-icon" href="#"
                       ><svg width="16" height="16">
                         <use
@@ -161,7 +161,7 @@
                         ></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="icon-link">
                     <a class="card-socials-icon" href="#"
                       ><svg width="16" height="16">
                         <use
@@ -169,7 +169,7 @@
                         ></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="icon-link">
                     <a class="card-socials-icon" href="#"
                       ><svg width="16" height="16">
                         <use
@@ -191,7 +191,7 @@
                 <h3 class="title-three centered">Tom Ford</h3>
                 <p class="inside-text centered">Frontend Developer</p>
                 <ul class="card-socials-list">
-                  <li>
+                  <li class="icon-link>
                     <a class="card-socials-icon" href="#"
                       ><svg width="16" height="16">
                         <use
@@ -199,7 +199,7 @@
                         ></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="icon-link>
                     <a class="card-socials-icon" href="#"
                       ><svg width="16" height="16">
                         <use
@@ -207,7 +207,7 @@
                         ></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="icon-link>
                     <a class="card-socials-icon" href="#"
                       ><svg width="16" height="16">
                         <use
@@ -215,7 +215,7 @@
                         ></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="icon-link>
                     <a class="card-socials-icon" href="#"
                       ><svg width="16" height="16">
                         <use
@@ -237,7 +237,7 @@
                 <h3 class="title-three centered">Camila Garcia</h3>
                 <p class="inside-text centered">Marketing</p>
                 <ul class="card-socials-list">
-                  <li>
+                  <li class="icon-link>
                     <a class="card-socials-icon" href="#"
                       ><svg width="16" height="16">
                         <use
@@ -245,15 +245,15 @@
                         ></use></svg
                     ></a>
                   </li>
-                  <li>
-                    <a class="card-socials-icon" href="#"
+                  <li class="icon-link>
+                    <a class=" card-socials-icon" href="#"
                       ><svg width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-twitter-1"
                         ></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="icon-link>
                     <a class="card-socials-icon" href="#"
                       ><svg width="16" height="16">
                         <use
@@ -261,7 +261,7 @@
                         ></use></svg
                     ></a>
                   </li>
-                  <li>
+                  <li class="icon-link>
                     <a class="card-socials-icon" href="#">
                       <svg width="16" height="16">
                         <use
@@ -284,7 +284,7 @@
                 <h3 class="title-three centered">Daniel Wilson</h3>
                 <p class="inside-text centered">UI Designer</p>
                 <ul class="card-socials-list">
-                  <li>
+                  <li class="icon-link>
                     <a class="card-socials-icon" href="#">
                       <svg width="16" height="16">
                         <use
@@ -293,7 +293,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="icon-link>
                     <a class="card-socials-icon" href="#">
                       <svg width="16" height="16">
                         <use
@@ -302,7 +302,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="icon-link>
                     <a class="card-socials-icon" href="#">
                       <svg width="16" height="16">
                         <use
@@ -311,7 +311,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="icon-link>
                     <a class="card-socials-icon" href="#">
                       <svg width="16" height="16">
                         <use
