--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <ul class="card-socials-list">
                   <li class="icon-link">
                     <a class="card-socials-icon" href="#"
-                      ><svg width="16" height="16">
+                      ><svg class="icon-fill" width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-instagram-2"
                         ></use></svg
@@ -155,7 +155,7 @@
                   </li>
                   <li class="icon-link">
                     <a class="card-socials-icon" href="#"
-                      ><svg width="16" height="16">
+                      ><svg class="icon-fill" width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-twitter-1"
                         ></use></svg
@@ -163,7 +163,7 @@
                   </li>
                   <li class="icon-link">
                     <a class="card-socials-icon" href="#"
-                      ><svg width="16" height="16">
+                      ><svg class="icon-fill" width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-facebook-1"
                         ></use></svg
@@ -171,7 +171,7 @@
                   </li>
                   <li class="icon-link">
                     <a class="card-socials-icon" href="#"
-                      ><svg width="16" height="16">
+                      ><svg class="icon-fill" width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-linkedin-1"
                         ></use></svg
@@ -191,33 +191,33 @@
                 <h3 class="title-three centered">Tom Ford</h3>
                 <p class="inside-text centered">Frontend Developer</p>
                 <ul class="card-socials-list">
-                  <li class="icon-link>
+                  <li class="icon-link">
                     <a class="card-socials-icon" href="#"
-                      ><svg width="16" height="16">
+                      ><svg class="icon-fill" width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-instagram-2"
                         ></use></svg
                     ></a>
                   </li>
-                  <li class="icon-link>
+                  <li class="icon-link">
                     <a class="card-socials-icon" href="#"
-                      ><svg width="16" height="16">
+                      ><svg class="icon-fill" width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-twitter-1"
                         ></use></svg
                     ></a>
                   </li>
-                  <li class="icon-link>
+                  <li class="icon-link">
                     <a class="card-socials-icon" href="#"
-                      ><svg width="16" height="16">
+                      ><svg class="icon-fill" width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-facebook-1"
                         ></use></svg
                     ></a>
                   </li>
-                  <li class="icon-link>
+                  <li class="icon-link">
                     <a class="card-socials-icon" href="#"
-                      ><svg width="16" height="16">
+                      ><svg class="icon-fill" width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-linkedin-1"
                         ></use></svg
@@ -237,33 +237,33 @@
                 <h3 class="title-three centered">Camila Garcia</h3>
                 <p class="inside-text centered">Marketing</p>
                 <ul class="card-socials-list">
-                  <li class="icon-link>
+                  <li class="icon-link">
                     <a class="card-socials-icon" href="#"
-                      ><svg width="16" height="16">
+                      ><svg class="icon-fill" width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-instagram-2"
                         ></use></svg
                     ></a>
                   </li>
-                  <li class="icon-link>
+                  <li class="icon-link">
                     <a class=" card-socials-icon" href="#"
-                      ><svg width="16" height="16">
+                      ><svg class="icon-fill" width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-twitter-1"
                         ></use></svg
                     ></a>
                   </li>
-                  <li class="icon-link>
+                  <li class="icon-link">
                     <a class="card-socials-icon" href="#"
-                      ><svg width="16" height="16">
+                      ><svg class="icon-fill" width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-facebook-1"
                         ></use></svg
                     ></a>
                   </li>
-                  <li class="icon-link>
+                  <li class="icon-link">
                     <a class="card-socials-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-linkedin-1"
                         ></use>
@@ -284,36 +284,36 @@
                 <h3 class="title-three centered">Daniel Wilson</h3>
                 <p class="inside-text centered">UI Designer</p>
                 <ul class="card-socials-list">
-                  <li class="icon-link>
+                  <li class="icon-link">
                     <a class="card-socials-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon-link>
+                  <li class="icon-link">
                     <a class="card-socials-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="icon-fill" class="svgfill" width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-twitter-1"
                         ></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon-link>
+                  <li class="icon-link">
                     <a class="card-socials-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-facebook-1"
                         ></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon-link>
+                  <li class="icon-link">
                     <a class="card-socials-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-linkedin-1"
                         ></use>
