--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
               <div class="name-item">
                 <h3 class="title-three centered">Daniel Wilson</h3>
                 <p class="inside-text centered">UI Designer</p>
+                
                 <ul class="card-socials-list">
                   <li class="icon-link">
                     <a class="card-socials-icon" href="#">
@@ -295,7 +296,7 @@
                   </li>
                   <li class="icon-link">
                     <a class="card-socials-icon" href="#">
-                      <svg class="icon-fill" class="svgfill" width="16" height="16">
+                      <svg class="icon-fill"  width="16" height="16">
                         <use
                           href="./images/social-icons.svg#icon-twitter-1"
                         ></use>
