--- a/index.html
+++ b/index.html
@@ -333,142 +333,131 @@
           <h2 class="title-two">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <article class="portfolio">
-                <div class="portfolio-image">
-                  <img
-                    src="./images/Our-portfolio-01.jpg"
-                    alt="Banking App"
-                    width="360"
-                    height="300"
-                  />
-                </div>
-                <div class="portfolio-overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
-                <div class="portfolio-name">
-                  <h3 class="title-three">Banking App</h3>
-                  <p class="inside-text">App</p>
-                </div>
-              </article>
+              <div class="portfolio-image">
+                <img
+                  src="./images/Our-portfolio-01.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+              </div>
+              <div class="portfolio-overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="portfolio-name">
+                <h3 class="title-three">Banking App</h3>
+                <p class="inside-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <article class="portfolio">
-                <div class="portfolio-image">
-                  <img
-                    src="./images/Our-portfolio-02.jpg"
-                    alt="Cashless Payment"
-                    width="360"
-                    height="300"
-                  />
-                </div>
-                <div class="portfolio-overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
-                <div class="portfolio-name">
-                  <h3 class="title-three">Cashless Payment</h3>
-                  <p class="inside-text">Marketing</p>
-                </div>
-              </article>
+              <div class="portfolio-image">
+                <img
+                  src="./images/Our-portfolio-02.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+              </div>
+              <div class="portfolio-overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="portfolio-name">
+                <h3 class="title-three">Cashless Payment</h3>
+                <p class="inside-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <article class="portfolio">
-                <div class="portfolio-image">
-                  <img
-                    src="./images/Our-portfolio-03.jpg"
-                    alt="Meditation App"
-                    width="360"
-                    height="300"
-                  />
-                </div>
-                <div class="portfolio-overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
-                <div class="portfolio-name">
-                  <h3 class="title-three">Meditation App</h3>
-                  <p class="inside-text">App</p>
-                </div>
-              </article>
+              <div class="portfolio-image">
+                <img
+                  src="./images/Our-portfolio-03.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+              </div>
+              <div class="portfolio-overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="portfolio-name">
+                <h3 class="title-three">Meditation App</h3>
+                <p class="inside-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <article class="portfolio">
-                <div class="portfolio-image">
-                  <img
-                    src="./images/Our-portfolio-04.jpg"
-                    alt="Taxi Service"
-                    width="360"
-                    height="300"
-                  />
-                </div>
-                <div class="portfolio-overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
-                <div class="portfolio-name">
-                  <h3 class="title-three">Taxi Service</h3>
-                  <p class="inside-text">Marketing</p>
-                </div>
-              </article>
+              <div class="portfolio-image">
+                <img
+                  src="./images/Our-portfolio-04.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                
+              </div>
+              <div class="portfolio-overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="portfolio-name">
+                <h3 class="title-three">Taxi Service</h3>
+                <p class="inside-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <article class="portfolio">
-                <div class="portfolio-image">
-                  <img
-                    src="./images/Our-portfolio-05.jpg"
-                    alt="Screen Illustrations"
-                    width="360"
-                    height="300"
-                  />
-                </div>
-                <div class="portfolio-overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
-                <div class="portfolio-name">
-                  <h3 class="title-three">Screen Illustrations</h3>
-                  <p class="inside-text">Design</p>
-                </div>
-              </article>
+              <div class="portfolio-image">
+                <img
+                  src="./images/Our-portfolio-05.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+              </div>
+              <div class="portfolio-overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="portfolio-name">
+                <h3 class="title-three">Screen Illustrations</h3>
+                <p class="inside-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <article class="portfolio">
-                <div class="portfolio-image">
-                  <img
-                    src="./images/Our-portfolio-06.jpg"
-                    alt="Online Courses"
-                    width="360"
-                    height="300"
-                  />
-                </div>
-                <div class="portfolio-overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
-                <div class="portfolio-name">
-                  <h3 class="title-three">Online Courses</h3>
-                  <p class="inside-text">Marketing</p>
-                </div>
-              </article>
+              <div class="portfolio-image">
+                <img
+                  src="./images/Our-portfolio-06.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+              </div>
+              <div class="portfolio-overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="portfolio-name">
+                <h3 class="title-three">Online Courses</h3>
+                <p class="inside-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
