--- a/index.html
+++ b/index.html
@@ -341,13 +341,12 @@
                   height="300"
                 />
               </div>
-              <div class="portfolio-overlay">
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+              <p class="overlay-text">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+
               <div class="portfolio-name">
                 <h3 class="title-three">Banking App</h3>
                 <p class="inside-text">App</p>
@@ -362,13 +361,12 @@
                   height="300"
                 />
               </div>
-              <div class="portfolio-overlay">
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+              <p class="overlay-text">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+
               <div class="portfolio-name">
                 <h3 class="title-three">Cashless Payment</h3>
                 <p class="inside-text">Marketing</p>
@@ -383,13 +381,12 @@
                   height="300"
                 />
               </div>
-              <div class="portfolio-overlay">
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+              <p class="overlay-text">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+
               <div class="portfolio-name">
                 <h3 class="title-three">Meditation App</h3>
                 <p class="inside-text">App</p>
@@ -403,15 +400,13 @@
                   width="360"
                   height="300"
                 />
-                
               </div>
-              <div class="portfolio-overlay">
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+              <p class="overlay-text">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+
               <div class="portfolio-name">
                 <h3 class="title-three">Taxi Service</h3>
                 <p class="inside-text">Marketing</p>
@@ -426,13 +421,12 @@
                   height="300"
                 />
               </div>
-              <div class="portfolio-overlay">
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+              <p class="overlay-text">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+
               <div class="portfolio-name">
                 <h3 class="title-three">Screen Illustrations</h3>
                 <p class="inside-text">Design</p>
@@ -447,13 +441,12 @@
                   height="300"
                 />
               </div>
-              <div class="portfolio-overlay">
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+              <p class="overlay-text">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+
               <div class="portfolio-name">
                 <h3 class="title-three">Online Courses</h3>
                 <p class="inside-text">Marketing</p>
